# klef

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SPEC.md  llms-full.txt  llms.txt
.claude/: settings.json
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
.superpowers/brainstorm/80590-1778097755/content/: visual-style.html
.superpowers/brainstorm/80590-1778097755/state/: server-stopped
crates/klef-cli/: Cargo.toml
crates/klef-cli/src/: cli.rs  lib.rs  macos_keychain_banner.rs  macos_keychain_banner_tests.rs  main.rs
crates/klef-cli/src/commands/: add.rs  backup.rs  completions.rs  edit.rs  export.rs  get.rs  import.rs  keychain.rs  list.rs  mod.rs  names.rs  rename.rs  restore.rs  rm.rs  run.rs  set_note.rs  status.rs  tags.rs
crates/klef-cli/src/commands/discover/: mod.rs  plan.rs
crates/klef-cli/src/commands/mcp/: audit.rs  mod.rs  policy.rs  policy_tests.rs  redact.rs  run_proc.rs  tools.rs  tools_audit.rs  tools_encode.rs  tools_tests.rs
crates/klef-cli/tests/: aliases.rs  backup.rs  cli.rs  discover.rs  edit_note_edit.rs  export_revalidate.rs  mcp.rs  names.rs  store_locking.rs  tags.rs
crates/klef-core/: Cargo.toml
crates/klef-core/src/: backup.rs  dto.rs  error.rs  fsx.rs  lib.rs
crates/klef-core/src/macos_keychain/: mod.rs  parse.rs  security_cli.rs  status.rs
crates/klef-core/src/store/: age_backend.rs  age_backend_tests.rs  file.rs  index.rs  mod.rs  ops.rs
crates/klef-core/tests/: store_atomicity.rs  store_remove.rs
crates/klef-gui/: Cargo.toml  index.html  package-lock.json  package.json  tauri.conf.json  tsconfig.json  vite.config.ts
crates/klef-gui/capabilities/: default.json
crates/klef-gui/icons/: icon.icns
crates/klef-gui/src/: dotenv_import.rs  main.rs
crates/klef-gui/src/dotenv_import/: helpers.rs  mod.rs  tests.rs
crates/klef-gui/ui/: App.svelte  main.ts  styles.css
crates/klef-gui/ui/lib/: AddKeyModal.svelte  ConfirmDialog.svelte  DotenvImportModal.svelte  EditKeyModal.svelte  KeyRow.svelte  KeychainAccessHelp.svelte  Modals.svelte  ProjectChips.svelte  SearchBar.svelte  SettingsModal.svelte  Toast.svelte  api.ts  clipboard.test.ts  clipboard.ts  dotenvPicker.ts  filter.test.ts  filter.ts  keyboardNav.test.ts  keyboardNav.ts  popoverLifecycle.ts  settings.test.ts  settings.ts  types.ts
docs/: klef-demo.cast  llm-usage.md  macos-keychain.md  mcp.md  release.md
docs/design/: 2026-05-05-mvp-design.md  2026-05-06-gui-design.md
docs/plans/: 2026-05-05-mvp-implementation.md
docs/superpowers/plans/: 2026-05-07-keychain-autoconfig.md  2026-05-07-mcp-server.md
docs/superpowers/specs/: 2026-05-07-keychain-autoconfig-design.md  2026-05-07-mcp-server-design.md
examples/quickstart/: .env  README.md  demo.sh
homebrew/: klef.rb
scripts/: check-lines.sh  claude-line-guard.sh  claude-stop-check.sh  regenerate-llms-full.sh  setup-dev.sh  update-homebrew-formula.sh
src/: cli.rs  envfile.rs  error.rs  lib.rs  main.rs
src/commands/: add.rs  backup.rs  completions.rs  edit.rs  export.rs  get.rs  import.rs  list.rs  mod.rs  names.rs  rename.rs  restore.rs  rm.rs  run.rs  set_note.rs  status.rs  tags.rs
src/commands/discover/: mod.rs  plan.rs
src/store/: age_backend.rs  age_backend_tests.rs  age_crypto.rs  backend.rs  file.rs  index.rs  keychain.rs  lock.rs  mod.rs  ops.rs
tests/: age_backend_integration.rs  backup.rs  cli.rs  discover.rs  import.rs  list_flags.rs  names.rs  store_atomicity.rs  store_remove.rs  value_from_file.rs
