[package]
name = "klef"
version = "0.1.0"
edition = "2024"
description = "Local-first vault for API keys and secrets, backed by the OS keychain."
license = "MIT"
repository = "https://github.com/slewinus/klef"
readme = "README.md"
keywords = ["cli", "secrets", "keychain", "api-keys", "vault"]
categories = ["command-line-utilities"]

[dependencies]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
