[package]
name = "klef"
version = "0.2.0"
edition = "2024"
description = "Local-first vault for API keys and secrets, backed by the OS keychain."
license = "MIT"
repository = "https://github.com/slewinus/klef"
readme = "README.md"
keywords = ["cli", "secrets", "keychain", "api-keys", "vault"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
keyring = { version = "3", features = ["apple-native", "sync-secret-service", "crypto-rust"] }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["serde", "formatting", "macros", "parsing"] }
dirs = "5"
walkdir = "2"
regex = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lib]
name = "klef"
path = "src/lib.rs"

[[bin]]
name = "klef"
path = "src/main.rs"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
