[package]
name = "klef"
version = "0.3.0"
description = "Local-first vault for API keys and secrets, backed by the OS keychain."
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["cli", "secrets", "keychain", "api-keys", "vault"]
categories = ["command-line-utilities"]

[dependencies]
klef-core = { version = "0.1.0", path = "../klef-core" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["serde", "formatting", "macros", "parsing"] }
dirs = "5"
walkdir = "2"
regex = "1"
age = { version = "0.11", features = ["armor"] }
zeroize = "1"

[dev-dependencies]
age = { version = "0.11", features = ["armor"] }
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lib]
name = "klef"
path = "src/lib.rs"

[[bin]]
name = "klef"
path = "src/main.rs"

[lints]
workspace = true
