[package]
name = "klef"
version = "0.3.0"
description = "Local-first vault for API keys and secrets, backed by the OS keychain."
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["cli", "secrets", "keychain", "api-keys", "vault"]
categories = ["command-line-utilities"]

[dependencies]
klef-core = { version = "0.1.0", path = "../klef-core" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["serde", "formatting", "macros", "parsing"] }
dirs = "5"
walkdir = "2"
regex = "1"
age = { version = "0.11", features = ["armor"] }
zeroize = "1"
rmcp   = { version = "0.1", features = ["server", "transport-io"], optional = true }
tokio  = { version = "1",   features = ["rt-multi-thread", "macros", "process", "io-util", "io-std", "time", "sync"], optional = true }
toml   = { version = "0.8", optional = true }
glob   = { version = "0.3", optional = true }
libc   = { version = "0.2", optional = true }

[features]
default = []
mcp = ["dep:rmcp", "dep:tokio", "dep:toml", "dep:glob", "dep:libc"]

[dev-dependencies]
age = { version = "0.11", features = ["armor"] }
assert_cmd = "2"
predicates = "3"
tempfile = "3"
# Test-only: use rmcp as a client to drive the spawned `klef mcp` server
# over stdio. `transport-child-process` provides `TokioChildProcess`, which
# wires the child's stdio into the rmcp client transport.
rmcp = { version = "0.1", features = ["client", "transport-child-process"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time"] }

[lib]
name = "klef"
path = "src/lib.rs"

[[bin]]
name = "klef"
path = "src/main.rs"

[lints.rust]
# Override workspace `forbid(unsafe_code)` to `deny`, so the `mcp` module
# can use a tightly-scoped `unsafe` block (setsid pre_exec + killpg) with
# `#[allow(unsafe_code)]`. All other unsafe stays denied.
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
