[package]
name = "klef-core"
version = "0.3.0"
description = "Core library for klef: storage backends, secret index, env-file parsing."
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["secrets", "keychain", "api-keys", "vault"]
categories = ["api-bindings", "cryptography"]

[dependencies]
keyring = { version = "3", features = ["apple-native", "sync-secret-service", "crypto-rust"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["serde", "formatting", "macros", "parsing"] }
dirs = "5"
age = { version = "0.11", features = ["armor"] }
zeroize = "1"
gethostname = "1"
fs4 = "0.13"
rpassword = "7"

[dev-dependencies]
age = { version = "0.11", features = ["armor"] }
tempfile = "3"

[lints]
workspace = true
