[package]
name = "klef-gui"
version = "0.1.0"
description = "Local-first vault for API keys — macOS GUI."
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
klef-core = { version = "0.1.0", path = "../klef-core" }
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
