[package]
name = "klef-gui"
version = "0.2.0"
description = "Local-first vault for API keys — macOS GUI."
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
klef-core = { version = "0.2.0", path = "../klef-core" }
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
